// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiline emphasis debug > cursor after **这是粗体** before newline 1`] = `
"<g>**</g><b>这是粗体</b><g>*</g>|<g>*</g>
<i>这是斜体</i>"
`;

exports[`multiline emphasis debug > cursor after **这是粗体** before newline 2`] = `
"<g>**</g><b>这是粗体</b><g>**</g>|
<i>这是斜体</i>"
`;
